<resources>
    <string name="app_name"></string>
    <string name ="Title">StudySpace</string>
    <string name="clickanywhere">Click anywhere to begin!</string>
    <string name="quiztitle">Quiz</string>

    <string name="correcto">Correct!!!</string>
    <string name="incorrecto">Incorrect :(</string>

    <!-- Strings for the Quiz Questions are stored here -->
    <string name="BasicsQ1">1. Who first challenged the Ptolemaic system? </string>
    <string name="BasicsQ2">2. Kepler’s 1st law is known as? </string>
    <string name="BasicsQ3">3. Kepler’s first law states that the orbits of the planets are oval in shape or..?</string>
    <string name="BasicsQ4">4. If a planet is further away from the sun than another planet, it takes______ to orbit the sun once </string>


    <string name="NewtonQ1">5. What law did Newton put forward? </string>
    <string name="NewtonQ2">6. The moon and other satellites rotate around the earth. Identify the force that keeps these satellites in orbit. </string>
    <string name="NewtonQ3">7. What two main factors keep a planet in motion? </string>
    <string name="NewtonQ4">8. The force of gravity on an object is called what? </string>

    <string name="StellarQ1">9. What is parallax? </string>
    <string name="StellarQ2">10. How far away is Alpha Centauri from our sun? </string>
    <string name="StellarQ3">11. Your two eyes can be part of an example of parallax. How does that relate to the Earth in stellar parallax? </string>
    <string name="StellarQ4">12. Which of the following is true? </string>

    <string name="MilkyQ1">13. How many stars are in the milky way? </string>
    <string name="MilkyQ2">14. What is the closest galaxy to the Milky way? </string>
    <string name="MilkyQ3">15. What type of galaxy is the Milky Way? </string>
    <string name="MilkyQ4">16. Who in 1783 discovered the motion of the solar system between the neighbouring stars? </string>


    <string name="ScaleQ1">17. The speed of light is? </string>
    <string name="ScaleQ2">18. The nearest star is about… </string>
    <string name="ScaleQ3">19. The orbit of Neptune is? </string>
    <string name="ScaleQ4">20. The distance from the sun to the earth is? </string>


    <string name="LifeQ1">21. Modern humans have only been around for? </string>
    <string name="LifeQ2">22. The number of planets with life is thought to be_____? </string>
    <string name="LifeQ3">23. To find the number of habitable planets, we need to understand…? </string>
    <string name="LifeQ4">24. What is Astrobiology? </string>
    <string name="vidtitle">Video Title</string>
    <string name="Videodescription">Video Description</string>
    <string name="gameInstructors">Click here to play random topic game!</string>

    <string name="Topic1">The Basics of Astronomy </string>
    <string name="Topic2">Newton and Gravitation</string>
    <string name="Topic3">Stellar Parallax</string>
    <string name="Topic4">Milky Way Galaxy</string>
    <string name="Topic5">Scale of the Universe</string>
    <string name="Topic6">Introduction to Astrobiology</string>
    <string name="oops">Oops! You\'ve landed on a black hole! Spin again!</string>


    <string name="next_fun_fact">Next Fun Fact!</string>
    <string name="ants_stretch_when_they_wake_up_in_the_morning">Ants stretch when they wake up in the morning.</string>
    <string name="did_you_know">Did you know?</string>
    <string name="CelestialBodiesInstructions">Welcome to the Celestial Bodies Page! Type in a celestial body and click the search bar to learn more about it! E.g. Pluto </string>
    <string name="CelestialBodyInfo">Celestial Body Info</string>

</resources>

