<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emptybgstarts"
    tools:context="com.example.outofthisworld.TopicSelectorGame"
    android:id="@+id/gamebackground">

    <ImageView
        android:id="@+id/venus"
        android:layout_width="173dp"
        android:layout_height="157dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="39dp"
        app:srcCompat="@drawable/venus" />

    <ImageView
        android:id="@+id/comet"
        android:layout_width="387dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="551dp"
        android:rotation="30"
        app:srcCompat="@drawable/meteorite" />


    <ImageView
        android:id="@+id/telescope"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/telescope"
        android:layout_centerInParent="true">

    </ImageView>

    <ImageView
        android:id="@+id/jupiter"
        android:layout_width="182dp"
        android:layout_height="193dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="538dp"
        app:srcCompat="@drawable/jupiter" />

    <ImageView
        android:id="@+id/earth"
        android:layout_width="103dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="419dp"
        app:srcCompat="@drawable/earth" />

    <ImageView
        android:id="@+id/mars"
        android:layout_width="139dp"
        android:layout_height="135dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="190dp"
        app:srcCompat="@drawable/mars" />

    <ImageView
        android:id="@+id/mercury"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="422dp"
        app:srcCompat="@drawable/mercury" />

    <ImageView
        android:id="@+id/neptune"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="278dp"
        android:layout_marginBottom="243dp"
        app:srcCompat="@drawable/neptune" />

    <TextView
        android:id="@+id/topic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mercury"
        android:layout_marginEnd="-192dp"
        android:layout_marginBottom="-33dp"
        android:layout_toStartOf="@+id/jupiter"
        android:text="@string/Topic1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mercury"
        android:layout_marginEnd="-307dp"
        android:layout_marginBottom="-164dp"
        android:layout_toStartOf="@+id/jupiter"
        android:text="@string/Topic2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/earth"
        android:layout_alignEnd="@+id/earth"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="-373dp"
        android:text="@string/Topic3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic4"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/earth"
        android:layout_alignEnd="@+id/earth"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="-501dp"
        android:text="@string/Topic4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/earth"
        android:layout_alignEnd="@+id/earth"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="-319dp"
        android:text="@string/Topic5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/topic6"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/earth"
        android:layout_alignEnd="@+id/earth"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="-142dp"
        android:text="@string/Topic6"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/blackhole"
        android:layout_width="129dp"
        android:layout_height="109dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="45dp"
        app:srcCompat="@drawable/blackhole" />

    <TextView
        android:id="@+id/oops"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-12dp"
        android:text="@string/oops"
        android:textSize="12sp"
        android:textStyle="bold" />


</RelativeLayout>